# VQVDB

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  Jenkinsfile  Kernel.cu  Kernel.cuh  LICENSE  LeafExtractor.cpp  LeafExtractor.hpp  PERFORMANCE_OPTIMIZATIONS.md  README.md  VQVAE.py  VQVAE_Decoder.cpp  VQVAE_training.py  VQVAE_v2.py  build.bat  build.sh  cpp_extractor.cpp  notebook.ipynb  notebook_scalar.ipynb  notebook_vec3f.ipynb  vcpkg.json
SOP/: SOP_VQVDB_Decoder.cpp  SOP_VQVDB_Decoder.hpp  SOP_VQVDB_Encoder.cpp  SOP_VQVDB_Encoder.hpp
VQVDB/: VQVAECodec.cpp  VQVAECodec.hpp
VQVDB/Utils/: VQVDB_Reader.hpp
VQVDB_CPP/: VQVAE_Decoder.cpp  VQVAE_Decoder.hpp  VQVAE_Encoder.cpp  VQVAE_Encoder.hpp  VQVAE_Training.cpp  VQVAE_v2.cpp  VQVAE_v2.hpp
VQVDB_CPP/Utils/: LeafExtractor.cpp  Utils.hpp  VQVDB_Reader.cpp  VQVDB_Reader.hpp
dwtvdb/: CMakeLists.txt  CompressionBackend.hpp  CompressionStats.hpp  Compressor.cpp  Compressor.hpp  FileFormat.hpp  IncrementalPCA.hpp  LeafActivityMask.hpp  Logger.hpp  Pipeline.cpp  Pipeline.hpp  ThreadSafeQueue.hpp  VDBStreamReader.cpp  VDBStreamReader.hpp  Wavelet.hpp  WaveletCompressor.cpp  WaveletCompressor.hpp  main.cpp
houdini_package/: vqvdb.json
pyVDB/: __init__.py  vdb_leaf_extractor.pyd
python/: VQVAE_v2.py  convert_to_header.py  save_for_inference.py  to_onnx.py  torch_profile.py  training.py
python/wavelets/: analysis.ipynb  analysis2.ipynb  wavelet_better.py  wavelet_compression_control.py
src/SOP/: SOP_Register.cpp  SOP_VQVDB_Decoder.cpp  SOP_VQVDB_Decoder.hpp  SOP_VQVDB_Encoder.cpp  SOP_VQVDB_Encoder.hpp
src/Utils/: Profiler.cpp  Profiler.hpp  VQVDB_Reader.cpp  VQVDB_Reader.hpp
src/VQVDB/: VQVAECodec.cpp  VQVAECodec.hpp
src/VQVDB/Backend/: IVQVAECodec.hpp  TorchBackend.cpp  TorchBackend.hpp
src/VQVDB/Utils/: PerformanceProfiler.hpp  Profiler.hpp  VQVDB_Reader.cpp  VQVDB_Reader.hpp
src/backends/onnx/: OnnxBackend.cpp  OnnxBackend.hpp  OnnxBackendFactory.cpp  OnnxBackendFactory.hpp  OnnxBackend_CPU.cpp  OnnxBackend_CPU.hpp  OnnxBackend_Cuda.cpp  OnnxBackend_Cuda.hpp
src/backends/torch/: TorchBackend.cpp  TorchBackend.hpp
src/core/: IVQVAECodec.cpp  IVQVAECodec.hpp
src/orchestrator/: VQVAECodec.cpp  VQVAECodec.hpp
